src/main/java/com/example/myidejava/core/exception/error/ControllerExceptionHandler.java
package com.example.myidejava.core.exception.error;

import lombok.RequiredArgsConstructor;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;

@ControllerAdvice
@RequiredArgsConstructor
public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {

    private ResponseEntity<Object> buildError(MyError error) {
        return new ResponseEntity<>(error, null, error.getErrorCode());
    }

    @ExceptionHandler(NotFoundException.class)
    protected ResponseEntity<Object> handleNotFoundException(NotFoundException e) {
        return buildError(new MyError(e.getErrorCode(), e.getErrorCodeRule(), e.getErrorMessage()));
    }

}
